manifests/argocd/argocd-ingress.yaml
apiVersion: "networking.k8s.io/v1beta1"
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/hook: Sync
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - argo.ingress.stackmasters.com
      secretName: argo-tls-secret
  rules:
    - http:
        paths:
          - path:
            backend:
              serviceName: argocd-server
              servicePort: https
      host: argo.ingress.stackmasters.com
